deploy/k8s/preprod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linklite-app
  namespace: linklite-preprod
  labels:
    app.kubernetes.io/name: linklite
    app.kubernetes.io/component: app
    app.kubernetes.io/environment: preprod
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: linklite
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linklite
        app.kubernetes.io/component: app
        app.kubernetes.io/environment: preprod
    spec:
      containers:
        - name: app
          image: ghcr.io/raresmusea/linklite:testing-REPLACE-WITH-SHA
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /api/app/readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/app/healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
